Some UTs fail when running under JDK17 (#4084)
### Motivation

To make all UTs can run under JDK17

### Changes

add `--add-opens java.base/java.util.concurrent.locks=ALL-UNNAMED`